# openclaw-smart-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml
docs/: openclaw-integration.md  template-guide.md  template-only-identity-solution.zh-CN.md
docs/superpowers/plans/: 2026-03-27-openclaw-identity-llm-fallback.md  2026-03-27-openclaw-skill-alignment.md  2026-03-27-openclaw-smart-agent.md  2026-03-28-openclaw-runtime-autostart.md  2026-03-28-smart-agent-routing.md
docs/superpowers/specs/: 2026-03-27-openclaw-identity-llm-fallback-design.md  2026-03-28-openclaw-runtime-autostart-design.md  2026-03-28-smart-agent-routing-design.md
plugin/: openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugin/src/: index.ts  openclaw-plugin-sdk.d.ts  runtime-autostart.test.ts  runtime-autostart.ts
scripts/: install.sh  verify_runtime.py
skills/openclaw-smart-agent/: SKILL.md
skills/openclaw-smart-agent/agents/: openai.yaml
skills/openclaw-smart-agent/references/: api.md
src/openclaw_smart_agent/: api.py  cli.py  config.py  identity.py  models.py  monitor.py  openclaw_llm.py  recovery.py  registry.py  router.py  runtime.py  store.py
src/openclaw_smart_agent/templates/: data-analyst.yaml  python-developer.yaml
tests/: test_api.py  test_bootstrap.py  test_ci_files.py  test_config.py  test_identity.py  test_monitor.py  test_registry.py  test_router.py
